<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_EventHistoricalSimple" Id="{9bfbef58-f4fe-4cf2-96e9-7857443803be}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									23.05.2017
//	Struktura zawierajaca zdarzenie - pelne informacje, np. do wizualizacji
// 	v1.0	|| TC v 3.1.4020.32		|| - pierwsza wersja
//==================================================================================================
TYPE ST_EventHistoricalSimple :
STRUCT
	dwID									: DWORD;
	dwParam									: DWORD;
	dwClass									: DWORD;
	dtDateBegin								: DT;
	dtDateEnd								: DT;
	wsMessage								: WSTRING(80);
	dwColor									: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>